# TSW-Modern

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json  {app}\Data\Gui\Default\Flash\AbilityBar.swf  {app}\Data\Gui\Default\Flash\AbilityList.swf  {app}\Data\Gui\Default\Flash\Achievement.swf  {app}\Data\Gui\Default\Flash\AnimaWheelLink.swf  {app}\Data\Gui\Default\Flash\Backpack2.swf  {app}\Data\Gui\Default\Flash\BarberShop.swf  {app}\Data\Gui\Default\Flash\BugreportWindow.swf  {app}\Data\Gui\Default\Flash\CabalManagement.swf  {app}\Data\Gui\Default\Flash\ChallengeJournal.swf  {app}\Data\Gui\Default\Flash\CharacterCreation.swf  {app}\Data\Gui\Default\Flash\CharacterSheet.swf  {app}\Data\Gui\Default\Flash\ClaimWindow.swf  {app}\Data\Gui\Default\Flash\CombatBackground.swf  {app}\Data\Gui\Default\Flash\Compass.swf  {app}\Data\Gui\Default\Flash\ComposeMailWindow.swf  {app}\Data\Gui\Default\Flash\ComputerPuzzle.swf  {app}\Data\Gui\Default\Flash\CouncilLogoPvpMap.swf  {app}\Data\Gui\Default\Flash\Crafting.swf  {app}\Data\Gui\Default\Flash\Credits.swf  {app}\Data\Gui\Default\Flash\DamageInfo.swf  {app}\Data\Gui\Default\Flash\DeathWindowController.swf  {app}\Data\Gui\Default\Flash\DebugWindow.swf  {app}\Data\Gui\Default\Flash\DialogWindow.swf  {app}\Data\Gui\Default\Flash\DialogueController.swf  {app}\Data\Gui\Default\Flash\DodgeBar.swf  {app}\Data\Gui\Default\Flash\FacebookBrowser.swf  {app}\Data\Gui\Default\Flash\FadeToBlack.swf  {app}\Data\Gui\Default\Flash\Fifo.swf  {app}\Data\Gui\Default\Flash\FriendWaypoint.swf  {app}\Data\Gui\Default\Flash\Friendlies.swf  {app}\Data\Gui\Default\Flash\FriendliesBuffs.swf  {app}\Data\Gui\Default\Flash\FriendliesHealth.swf  {app}\Data\Gui\Default\Flash\FriendliesStates.swf  (+115 more)
crates/tsw-cli/: Cargo.toml
crates/tsw-cli/src/: args.rs  config_file.rs  errors.rs  init.rs  install.rs  main.rs  reporter.rs  uninstall.rs  verify_cmd.rs
crates/tsw-core/: Cargo.toml
crates/tsw-core/src/: client_files.rs  download.rs  encoder_native.rs  game_files.json  install.rs  lib.rs  progress.rs  rdb.rs  rdbdata.rs  redux.rs  sys.rs
crates/tsw-core/src/bxml_cache/Data/Gui/Default/: Fonts.bxml  Modules.bxml
crates/tsw-core/src/shader_cache/: shader.cache.dx11.local3  shader.cache.local3
src/: App.css  App.tsx  BottomBar.tsx  (+8 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/redux-standalone/: Cargo.toml
src-tauri/redux-standalone/src/: lib.rs
src-tauri/src/: bxml.rs  client_files.rs  config.rs  download.rs  encoder_native.rs  game_files.json  lib.rs  main.rs  rdb.rs  rdbdata.rs  redux.rs  tauri_reporter.rs  verify.rs
src-tauri/src/bxml_cache/Data/Gui/Default/: BundleGroups.bxml  FontConfig.bxml  TextColors.bxml  Variables.bxml
src-tauri/src/bxml_cache/Data/Gui/Default/ViewTemplates/: GUITKClasses.bxml  LargeClasses.bxml
(+33 files in other folders)
