[package]
name = "tsw-modern-launcher"
version = "0.1.0"
description = "A modern launcher for The Secret World"
authors = ["endlessvex"]
edition = "2021"
default-run = "tsw-modern-launcher"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = "0.37"
md-5 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "json"] }
tokio = { version = "1", features = ["fs", "sync", "rt", "macros"] }
futures = "0.3"
rand = "0.8"
log = "0.4"
env_logger = "0.11"
flate2 = { version = "1", default-features = false, features = ["zlib"] }
lzma-rs = "0.3"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2.5.3"

[features]
custom-protocol = ["tauri/custom-protocol"]
