[package]
name = "tsw-cli"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Linux CLI downloader for The Secret World"

[[bin]]
name = "tsw-downloader"
path = "src/main.rs"

[dependencies]
tsw-core = { path = "../tsw-core" }
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
dialoguer = "0.11"
toml = "0.8"
directories = "5"
anyhow = "1"
thiserror = "1"
ctrlc = "3"
walkdir = "2"
env_logger = "0.11"
log = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
