[package]
name = "tsw-core"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core download, verify, and RDB parsing library for The Secret World"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = "0.37"
lzma-rs = "0.3"
md-5 = "0.10"
log = "0.4"
futures = "0.3"
rand = "0.8"
flate2 = { version = "1", default-features = false, features = ["zlib"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "json", "blocking"] }
tokio = { version = "1", features = ["fs", "sync", "rt", "macros"] }
